HHH-5042 - TableGenerator does not increment hibernate_sequences.next_hi_value anymore after having exhausted the current lo-range
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@19470 1b8cb986-b30d-0410-93ca-fae66ebed9b2